--- a/design1.html
+++ b/design1.html
@@ -40,7 +40,7 @@
                 
            
             <a href="/design1.html" class="active" >Design 1</a>
-            <a href="/Design2.html">Design 2</a>
+            <a href="/design2.html">Design 2</a>
             <a href="/design3.html">Design 3</a>
 
 
