--- a/design3.html
+++ b/design3.html
@@ -40,7 +40,7 @@
 
         
             <a href="/design1.html">Design 1</a>
-        <a href="/Design2.html" >Design 2</a>
+        <a href="/design2.html" >Design 2</a>
         <a href="/design3.html" class="active">Design 3</a>
 
             <h1 class="finalyearproject">
