--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    link rel="shortcut icon" href="/imgs/favicon.ico" type="image/x-icon" width="50%">
+    <title>Writing</title>
     <link rel="stylesheet" href="/css/writingstyle.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
