--- a/design1.html
+++ b/design1.html
@@ -47,6 +47,7 @@
             <h1 class="reddit">
                 <h1 class="research" data-aos="fade-up-left">Research And Empathize</h1>
                 <img class="userstuff" src="/Design1/Research.jpg" alt="1" data-aos="fade-up-right">
+                <img class="userstuff" src="/Design1/User Flow.jpg" alt="1" data-aos="fade-up-left">
                 
                 <h1 class="" data-aos="fade-up-left">Wireframe</h1>
                 <img class="wire" src="/Design1/WireFrames.jpg" alt="1" data-aos="fade-up-right">
