--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="main_nav">
                     
                     
-                    <li> <a href="/designMain.html">Designs</a></li>
+                    <li> <a href="/design1.html">Designs</a></li>
                     <li><a href="/art.html">Art</a></li>
                     <li><a href="/writing.html">Writing</a></li>
                     <li><a href="/about.html">About</a></li>
