--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Writing</title>
     <link rel="stylesheet" href="/css/writingstyle.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
@@ -22,7 +22,7 @@
             <nav>
 
                 <ul class="main_nav">
-                    <li> <a href="/designMain.html">Designs</a></li>
+                    <li> <a href="/design1.html">Designs</a></li>
                     <li><a href="/art.html">Art</a></li>
                     <li><a href="/writing.html">Writing</a></li>
                     <li><a href="/about.html">About</a></li>
