--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
                 <ul class="buttons">
                     <li data-aos="zoom-in" data-aos-delay="400" data-aos-anchor-placement="top-center" class="design-button"><a
-                            href="/designMain.html">Designs </a></li>
+                            href="/design1.html">Designs </a></li>
                     <li data-aos="zoom-in" data-aos-delay="400" data-aos-anchor-placement="top-center" class="art-button"><a
                             href="/art.html">Art </a></li>
                     <li data-aos="zoom-in" data-aos-delay="400" data-aos-anchor-placement="top-center" class="writing-button"><a
