--- a/art.html
+++ b/art.html
@@ -47,13 +47,17 @@
                 <img src="/Art/House.jpg" alt="1" data-aos="fade-up-left">
                 <img src="/Art/Lady In The House.jpg" alt="2" data-aos="fade-up">
                 <img src="/Art/Hangar.jpg" alt="3" data-aos="fade-up-right">
+                
+                <img src="/Art/Artist. Not a creator.jpg" alt="1" data-aos="fade-up-left">
+                <img src="/Art/Phoebs.jpg" alt="2" data-aos="fade-up">
+                <img src="/Art/Rebel Girl.jpg" alt="3" data-aos="fade-up-right">
 
                 <img src="/Art/Lady with Rose.jpg" alt="1" data-aos="fade-up-left">
                 <img src="/Art/GirlBoy.jpg" alt="2" data-aos="fade-up">
                 <img src="/Art/Shoe.jpg" alt="3" data-aos="fade-up-right">
 
                 <img src="/Art/Mountain.jpg" alt="1" data-aos="fade-up-left">
-                <img src="/Art/Phoebs.jpg" alt="2" data-aos="fade-up">
+                <img src="/Art/Bottle.jpg" alt="2" data-aos="fade-up">
                 <img src="/Art/Door To Somewhere Pix.jpg" alt="3" data-aos="fade-up-right">
 
             </h1>
